; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/qnx/local/extr_32154.c_find_libc.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/qnx/local/extr_32154.c_find_libc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTLD_LAZY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"error: dlopen() failed\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"error: dlsym() %s\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"[-] %s(): 0x%x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_libc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @RTLD_LAZY, align 4
  %6 = call i8* @dlopen(i32* null, i32 %5)
  store i8* %6, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = call i32 (i32, i8*, ...) @errx(i32 1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %1
  %11 = load i8*, i8** %3, align 8
  %12 = load i8*, i8** %2, align 8
  %13 = call i64 @dlsym(i8* %11, i8* %12)
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %10
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 (i32, i8*, ...) @errx(i32 1, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %16, %10
  %20 = load i8*, i8** %2, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i8* %20, i32 %21)
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @checknull(i32 %23)
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i8* @dlopen(i32*, i32) #1

declare dso_local i32 @errx(i32, i8*, ...) #1

declare dso_local i64 @dlsym(i8*, i8*) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1

declare dso_local i32 @checknull(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
